--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,5 +1,9 @@
 body {
-  background-color: #e5e5e5;
+  background: #f7f7f9;;
+}
+
+.header-containers {
+    background-color: #fff;
 }
 
 *,
@@ -32,7 +36,7 @@ nav {
 }
 
 .header-at-top {
-  background-image: url("./img/header-shapes\ mobile.png");
+  background-image: url("./image/header-shapes-mobile.png");
   background-repeat: no-repeat;
   background-color: #fff;
   margin-bottom: 20px;
@@ -43,6 +47,7 @@ nav {
   flex-direction: column;
   justify-content: center;
   gap: 12px;
+  width: 100%;
 }
 
 .primary-text {
@@ -386,7 +391,7 @@ li {
 
 .contact {
   background-color: #6070ff;
-  background-image: url(./img/contact\ form\ shapes-mobile.png);
+  background-image: url(./image/contact-shapes-mobile.png);
   background-position: right;
   background-repeat: no-repeat;
   display: flex;
