--- a/desktop-respons.css
+++ b/desktop-respons.css
@@ -1,10 +1,10 @@
 @media screen and (min-width: 768px) {
   body {
-    background-color: #e5e5e5;
+    background-color: #f4f5f7;
   }
 
   .header-at-top {
-    background-image: url(./img/Header\ bg.svg);
+    background-image: url(./image/header-bg-desktop.png);
     background-size: cover;
   }
 
@@ -19,10 +19,12 @@
   .logo {
     padding-left: 143px;
     color: #6070ff;
+	margin-top: 25px;
   }
 
   .navbar-items {
     padding-right: 142px;
+	margin-top: 25px;
   }
 
   .navbar-items a {
@@ -63,6 +65,26 @@
     margin-right: auto;
     height: fit-content;
   }
+  
+  #first-card {
+	flex: none;
+    order: 2;
+    flex-grow: 0;
+  }
+  
+  #second-card {
+	flex-direction: row-reverse;
+	flex: none;
+    order: 3;
+    flex-grow: 0;
+  }
+  
+  #fourth-card {
+	flex-direction: row-reverse;
+	flex: none;
+	order: 1;
+	flex-grow: 0;
+  }
 
   .more-details {
     display: flex;
@@ -74,7 +96,8 @@
   }
 
   .snapshot {
-    width: 554px;
+	left: 24px;
+	top: 24px;
     border-radius: 1px;
   }
 
@@ -91,9 +114,11 @@
 
   .social-media-icons2 {
     padding-left: 0;
+	word-spacing: 20px;
   }
 
-  .social-media-icons li {
+  .social-media-icons li,
+  .social-media-icons2 li {
     display: inline;
   }
 
@@ -146,13 +171,13 @@
     font-size: 20px;
   }
 
-  /* contact section */
-
   .contact {
     padding: 122px 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
+	background-image: url(./image/bg-contact.png);
+	background-size: cover;
   }
 
   .contact h2 {
