Fixed some errors form the linters

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,9 +1,9 @@
 body {
-  background: #f7f7f9;;
+  background: #f7f7f9;
 }
 
 .header-containers {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 *,
