My latest commit changing some optional issue

--- a/desktop-respons.css
+++ b/desktop-respons.css
@@ -152,7 +152,7 @@
   .language-list li {
     flex-direction: column;
     height: fit-content;
-	padding: 20px 0;
+    padding: 20px;
   }
 
   .frameworks,
