My first commit

--- a/desktop-respons.css
+++ b/desktop-respons.css
@@ -45,7 +45,21 @@
 
   .text-about {
     padding: 0 260px;
+	animation-duration: 3s;
+	animation-name: slidein;
   }
+  
+  @keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+ }
 
   .work-container {
     display: grid;
@@ -96,8 +110,7 @@
   }
 
   .snapshot {
-    left: 24px;
-    top: 24px;
+    margin: auto auto auto auto;
     border-radius: 1px;
   }
 
@@ -253,6 +266,9 @@
     color: #fff;
     background-color: #396df2;
     cursor: pointer;
+    -ms-transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2); 
   }
 
   .button-submit:active {
