Add scale up transition for projects snapshot

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -469,3 +469,11 @@ li {
   resize: none;
   height: auto;
 }
+
+.box img {
+  transition: transform 2s;
+}
+
+.box img:hover {
+  transform: scale(108%);
+  }
