--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -72,6 +72,24 @@ nav {
   margin-top: 14px;
 }
 
+.text-about {
+  padding: 0 24px;
+  animation-duration: 3s;
+  animation-name: slidein;
+}
+  
+@keyframes slidein {
+ from {
+   margin-left: 100%;
+   width: 300%;
+ }
+
+ to {
+   margin-left: 0%;
+   width: 100%;
+ }
+}
+
 .social {
   margin-top: 12px;
   padding: 0 24px;
