--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -414,6 +414,7 @@ li {
   border-top-left-radius: 100px;
 }
 
+.contact h1,
 .contact h2 {
   font-family: 'Poppins', sans-serif;
   font-style: normal;
