--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -21,6 +21,57 @@ nav {
   padding: 6px 24px;
 }
 
+.nav-wrapper {
+  position: fixed;
+  inset: 0;
+  height: 100vh;
+  width: 100vw;
+  -moz-transition: all 0.3s ease-in;
+  -ms-transition: all 0.3s ease-in;
+  -o-transition: all 0.3s ease-in;
+  -webkit-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
+}
+
+.nav-bg {
+  background-color: #6070ffdc;
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  inset: 0;
+}
+
+.navbar-items {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  padding: 90px 32px;
+  gap: 32px;
+}
+
+.navbar-items a {
+  font-size: 32px;
+  color: #fff;
+  font-weight: bolder;
+  text-decoration: none;
+}
+
+.close-menu {
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  font-size: 32px;
+  position: absolute;
+  top: 25px;
+  right: 30px;
+  color: #fff;
+  font-weight: 500;
+}
+
 .menu-phone {
   background-color: #b400;
   border: none;
