--- a/desktop-respons.css
+++ b/desktop-respons.css
@@ -22,9 +22,27 @@
     margin-top: 25px;
   }
 
+  .nav-wrapper {
+    position: static;
+    height: auto;
+    width: auto;
+  }
+
+  .nav-bg {
+    display: none;
+  }
+
+  .close-menu {
+    display: none;
+  }
+
   .navbar-items {
     padding-right: 142px;
     margin-top: 25px;
+    display: block;
+    position: static;
+    padding-top: unset;
+    padding-bottom: unset;
   }
 
   .navbar-items a {
@@ -282,11 +300,5 @@
 
   .box img:hover {
     transform: scale(112%);
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .navbar-items {
-    display: none;
   }
 }
