--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -23,7 +23,7 @@ nav {
 
 .nav-wrapper {
   position: fixed;
-  left: -100%;
+  left: 100%;
   top: 0;
   height: 100vh;
   width: 100vw;
@@ -32,8 +32,6 @@ nav {
   -o-transition: all 0.3s ease-in;
   -webkit-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
-  
-  
 }
 
 .nav-wrapper.open {
@@ -94,6 +92,20 @@ nav {
   font-size: 18px;
   line-height: 20px;
   color: #6070ff;
+}
+
+.navbar-items a {
+  height: 24px;
+  left: 0px;
+  right: 68px;
+  top: calc(50% - 24px/2);
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 44px;
+  color: #fff;
+  margin-bottom: 40px;
 }
 
 .header-at-top {
