--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -597,12 +597,12 @@ li {
 }
 
 .closeModal {
-  margin-right: 30px;
-  margin-left: 295px;
+  left: 25%;
+  right: 25%;
   top: 25%;
   bottom: 25%;
-  border: #67798E;
-  font-size: 28px;
+  font-size: 30px;
+  border: 2px #67798e;
 }
 
 .closeModal:hover,
@@ -610,6 +610,19 @@ li {
   color: red;
   text-decoration: none;
   cursor: pointer;
+}
+
+.title-close-in-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px;
+  gap: 12px;
+  width: 311px;
+  height: 40px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
 
 .primary-text-modal {
@@ -623,6 +636,11 @@ li {
   flex: none;
   order: 0;
   flex-grow: 0;
+}
+
+.snapshotModal {
+  border-radius: 8px;
+  margin: auto auto auto auto;
 }
 
 .button-in-row {
@@ -656,7 +674,7 @@ li {
   height: 48px;
   left: 9px;
   bottom: 4px;
-  border: 1px solid #6070FF;
+  border: 1px solid #6070ff;
   border-radius: 8px;
   position: absolute;
   margin-left: 9px;
@@ -680,7 +698,7 @@ li {
   height: 48px;
   left: 9px;
   bottom: 4px;
-  border: 1px solid #6070FF;
+  border: 1px solid #6070ff;
   border-radius: 8px;
   position: absolute;
 }
@@ -693,7 +711,6 @@ li {
 #icon-gitModal {
   margin-left: 157px;
 }
-
 
 .details-modal {
   width: 311px;
@@ -708,4 +725,8 @@ li {
   order: 0;
   flex-grow: 0;
   margin: auto auto auto auto;
+}
+
+#other-tech {
+  display: none;
 }
