--- a/desktop-respons.css
+++ b/desktop-respons.css
@@ -342,8 +342,8 @@
   .snapshotModal {
     width: 100%;
     height: 586px;
-    left: 0px;
-    top: 0px;
+    left: 0;
+    top: 0;
   }
 
   .details-modal {
@@ -351,7 +351,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0px;
+    padding: 0;
     gap: 12px;
     position: absolute;
     width: 778px;
@@ -399,7 +399,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 0px;
+    padding: 0;
     gap: 12px;
     width: 40%;
   }
