--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -300,6 +300,8 @@ li {
   font-size: 12px;
   letter-spacing: 0.03em;
   color: #6070ff;
+  margin-left: 5px;
+  position: relative;
 }
 
 .see-project {
@@ -574,7 +576,7 @@ li {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow-y: scroll;;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 }
@@ -588,9 +590,9 @@ li {
   gap: 12px;
   position: absolute;
   width: 343px;
-  height: 713px;
+  height: 720px;
   left: calc(50% - 343px / 2);
-  top: 60px;
+  top: 5px;
   background: #fff;
   border: 1px solid #dfe1e6;
   border-radius: 16px;
