--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -301,6 +301,7 @@ li {
   letter-spacing: 0.03em;
   color: #6070ff;
   margin-left: 5px;
+  margin-top: 5px;
   position: relative;
 }
 
@@ -576,7 +577,7 @@ li {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow-y: scroll;;
+  overflow-y: scroll;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 }
@@ -590,7 +591,7 @@ li {
   gap: 12px;
   position: absolute;
   width: 343px;
-  height: 720px;
+  height: 723px;
   left: calc(50% - 343px / 2);
   top: 5px;
   background: #fff;
@@ -648,7 +649,7 @@ li {
 
 .button-in-row {
   width: 311px;
-  height: 56px;
+  height: 53px;
   flex: none;
   order: 3;
   flex-grow: 0;
