Checking errors from linter

--- a/desktop-respons.css
+++ b/desktop-respons.css
@@ -256,6 +256,7 @@
     margin: 12px 0;
     border: 1px solid #cfd8dc;
     padding: 1rem 12px;
+    font-family: 'Poppins', sans-serif;
   }
 
   .small-email {
@@ -263,6 +264,7 @@
     margin: 12px 0;
     padding: 1rem 1px;
     font-size: 18px;
+    font-family: 'Poppins', sans-serif;
   }
 
   #text-area {
