--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -554,6 +554,7 @@ li {
   margin: 12px 24px;
   border: 1px solid #cfd8dc;
   padding: 1rem 12px;
+  font-family: 'Poppins', sans-serif;
 }
 
 #text-area {
@@ -748,4 +749,5 @@ li {
   margin: 12px 24px;
   padding: 1rem 1px;
   font-size: 16px;
+  font-family: 'Poppins', sans-serif;
 }
